--- a/css/marine_weather.css
+++ b/css/marine_weather.css
@@ -11,7 +11,7 @@ body {
 
 .header_fixed {
     background-color: #ffffff;
-    border-bottom: 1px solid rgb(217, 217, 217);
+    border-bottom: 1px solid rgb(226, 226, 226);
     position: fixed;
     width: 100%;
     height: 50px;
@@ -44,13 +44,13 @@ body {
 table {
     margin: 0 !important;
     color: rgb(32, 32, 32) !important;
-    border-bottom: 1px solid rgb(206, 206, 206) !important;
+    border-bottom: 1px solid rgb(219, 219, 219) !important;
 }
 
 .table_div {
     width: 100%;
     min-width: 360px !important;
-    background-color: rgb(219, 218, 218);
+    background-color: rgb(237, 237, 237);
     color: #3a3a3a !important;
     display: block;
     margin-top: 10px;
@@ -64,7 +64,7 @@ table {
 
 .div_colortable_title {
     /* background-color: black; */
-    background-color: rgb(213, 213, 213);
+    background-color: rgb(222, 222, 222);
     font-size: .8em;
     font-weight: bold;
     padding-top: 2px;
@@ -73,7 +73,7 @@ table {
 
 .inner_div {
     /* background-color: #181818; */
-    background-color: #e5e5e5;
+    background-color: #efefef;
     padding: .5em;
     height: 450px;
     opacity: 1;
@@ -103,21 +103,16 @@ table {
 
 .cell_highlight {
     font-weight: bolder !important;
-    animation: blink_animation 2s infinite;
-    -webkit-animation: blink_animation 2s infinite;
+    animation: blink_animation 3s infinite;
+    -webkit-animation: blink_animation 3s infinite;
 }
 
 @keyframes blink_animation {
-
-    0%,
-    49% {
+    0% {
         background-color: transparent;
     }
 
-    50%,
-    100% {
-        color: inherit;
-    }
+    100% {}
 }
 
 .axis_highlight {
